palm background collapsible content

--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -520,6 +520,7 @@ html .structure form, body .structure form {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: white;
+  z-index: 1;
 }
 
 html .structure form h3, body .structure form h3 {
@@ -657,6 +658,7 @@ html .s-content, body .s-content {
   list-style: none;
   margin: auto;
   color: #0c4358;
+  color: black;
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
   outline: none;
@@ -666,6 +668,7 @@ html .s-content, body .s-content {
   padding-top: 18px;
   padding-right: 12px;
   background-color: white;
+  position: relative;
   max-height: 0;
   overflow: hidden;
   -webkit-transition: max-height 0.2s ease-out;
@@ -696,6 +699,22 @@ html .s-content .sections .first, body .s-content .sections .first {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+html .s-content:before, body .s-content:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.18;
+  background-image: url("/img/palm-tree-silhouette_500x500.png");
+  background-repeat: repeat;
+  -ms-background-size: cover;
+  background-size: cover;
 }
 
 html .active, html .collapsible:hover, body .active, body .collapsible:hover {
@@ -1643,5 +1662,30 @@ body {
   left: 10px;
   position: absolute;
   width: 90px;
+}
+
+path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  -webkit-animation: dash 5s linear alternate infinite;
+          animation: dash 5s linear alternate infinite;
+}
+
+@-webkit-keyframes dash {
+  from {
+    stroke-dashoffset: 822;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 822;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
