--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -699,20 +699,20 @@ html, body {
       content: ' ';
       display: block;
       position: absolute;
-      left: 0;
-      top: 0;
+      // left: 0;
+      // top: 0;
       width: 100%;
       height: 100%;
       z-index: 1;
-      opacity: 0.18;
+      opacity: 0.08;
       background-image: url('/img/palm-tree-silhouette_500x500.png');
-      background-repeat: repeat;
+      background-repeat: round;
       // background-position: 50% 0;
-      -ms-background-size: cover;
-      -o-background-size: cover;
-      -moz-background-size: cover;
-      -webkit-background-size: cover;
-      background-size: cover;
+      // -ms-background-size: cover;
+      // -o-background-size: cover;
+      // -moz-background-size: cover;
+      // -webkit-background-size: cover;
+      // background-size: cover;
     }
 
     /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
