--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -382,15 +382,19 @@ html, body {
       .view button {
         border: none;
         outline: 0;
-        padding: 10px;
+        
         color: white;
         background-color: #000;
         text-align: center;
         cursor: pointer;
-        width: 80%;
+        width: 88%;
         font-size: 1.58rem;
 
         border-radius: 2px;
+
+        padding: 1rem;
+        // padding: .8rem;
+        // margin: .8rem;
 
         z-index: 3;
       }
@@ -508,6 +512,7 @@ html, body {
 
           color: black;
           border: 1px dashed black;
+          background: linear-gradient(to right, #DAC6A6, white);
           opacity: .8;
 
         }
@@ -555,8 +560,11 @@ html, body {
         }
     
         input[type=submit] {
-          background-color: #FF8000;
+          // background-color: #FF8000;
+          background: linear-gradient(to right, #DAC6A6, white);
+          background: #DAC6A6;
           color: whitesmoke;
+          color: black;
           border-style: none;
           padding: 1rem;
           margin-bottom: 2rem;
@@ -615,9 +623,13 @@ html, body {
       padding-right: 18px;
 
       width: 100%;
+
       border: none;
-      border-top-right-radius: 1rem;
-      border-top-left-radius: 1rem;
+      border-top-right-radius: .8rem;
+      border-top-left-radius: .8rem;
+      border-top: 2px solid #DAC6A6;
+      border-left: 2px solid #DAC6A6;
+      border-right: 2px solid #DAC6A6;
 
       text-align: center;
 
@@ -646,8 +658,13 @@ html, body {
       color: black;
       // color: rgb(65, 38, 3);
       
-      border-bottom-right-radius: 1rem;
-      border-bottom-left-radius: 1rem;
+      border-bottom-right-radius: .8rem;
+      border-bottom-left-radius: .8rem;
+      border-bottom: 2px solid #DAC6A6;
+      border-left: 2px solid #DAC6A6;
+      border-right: 2px solid #DAC6A6;
+
+
       // text-align: left;
       outline: none;
 
@@ -666,9 +683,13 @@ html, body {
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.2s ease-out;
+      
 
       z-index: 0;
 
+      #col {
+        // color: #FED860;
+      }
 
       .sections {
 
@@ -686,13 +707,34 @@ html, body {
         .first {
           justify-content: center;
           // max-width: 40%;
+
+          .title {
+            // color: tomato;
+            color: rgb(18, 30, 31);
+            background: linear-gradient(to right, #DAC6A6, white);
+            padding: 5px;
+          }
         }
     
         .second {
           // justify-content: flex-end;
+          .title {
+            // color: tomato;
+            color: rgb(18, 30, 31);
+            background: linear-gradient(to right, #DAC6A6, white);
+            padding: 5px;
+          }
         }
-    
+        
       }
+
+      .title {
+        // color: tomato;
+        color: rgb(18, 30, 31);
+        background: linear-gradient(to right, #DAC6A6, white);
+        padding: 5px;
+      }
+
     }
 
     .s-content:before {
@@ -717,7 +759,8 @@ html, body {
 
     /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
     .active, .collapsible:hover {
-      background-color: rgb(188, 221, 235);
+      // background-color: rgb(188, 221, 235);
+      background: linear-gradient(to right, #DAC6A6, white);
       // background: #00b4ff;
       // background-color: skyblue;
       // background-color: #488FC4;
