--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -9,6 +9,11 @@ html, body {
   width: 100%;
   height: 100%;
   background: #78A4DA;
+  background: -webkit-gradient(linear, right top, left bottom, from(#78A4DA), color-stop(#eff3f5), to(#DAC6A6));
+  background: linear-gradient(to bottom left, #78A4DA, #eff3f5, #DAC6A6);
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   /* Style the button that is used to open and close the collapsible content */
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
   /* section {
