--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -14,6 +14,10 @@ html, body {
     width: 100%;
     height: 100%;
     background: #78A4DA;
+    background: linear-gradient(to bottom left, #78A4DA,  rgb(239, 243, 245), #DAC6A6);;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
     body, h1, h2, h3, a {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
