--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -14,7 +14,7 @@ html, body {
     width: 100%;
     height: 100%;
     background: #78A4DA;
-    background: linear-gradient(to bottom left, #78A4DA,  rgb(239, 243, 245), #DAC6A6);;
+    background: linear-gradient(to bottom left, #78A4DA);
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -144,6 +144,7 @@ html, body {
         // }
         
       }
+
     }
   
     .search-cover-photo-container, .heroBg {
