--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -13,7 +13,7 @@ html, body {
     
     width: 100%;
     height: 100%;
-    background: #78A4DA;
+    // background: #78A4DA;
     background: linear-gradient(to bottom left, #78A4DA);
     margin: 0;
     background-repeat: no-repeat;
@@ -76,12 +76,12 @@ html, body {
       .dropdown-menu {
         background-color: inherit;
         background: linear-gradient(black, rgb(9, 24, 29));;
-        // display: flex;
+      
         flex-direction: column;
-        // max-width: 10px;
+        
         a {
           color: whitesmoke;
-          // padding: 10px;
+         
           margin: 20px;
           padding-top: 20px;
           text-align: center;
@@ -119,7 +119,7 @@ html, body {
       min-height: 100%;
       height: auto !important;
       height: 100%;
-      // margin: 0 auto -4em;
+      
       margin: auto;
       z-index: 1;
 
@@ -133,15 +133,9 @@ html, body {
 
       #pictures {
 
-        // width: 55px;
-        // border: 1px solid whitesmoke;
         align-self: center;
-        // margin-left: 48%;
+        
         z-index: 3 !important;
-
-        // a {
-         
-        // }
         
       }
 
@@ -266,7 +260,7 @@ html, body {
 
       section {
         padding-top: 4rem;
-        // padding-bottom: 30px;
+      
       }
 
     }
@@ -398,8 +392,6 @@ html, body {
         border-radius: 2px;
 
         padding: 1rem;
-        // padding: .8rem;
-        // margin: .8rem;
 
         z-index: 3;
       }
@@ -417,25 +409,11 @@ html, body {
         // height: 28rem;
         height: auto;
     
-        // top: 80%;
-        // bottom: 20%;
-
-        // display: inline-block;
-        // align-self: flex-end;
-
-        // max-width: 40rem;
         text-align: center;
         align-items: center;
         align-content: center;
       
         font-size: 1.58rem;
-        // background-color: white;
-    
-        // padding: 1rem;
-    
-        // border-bottom: 4px solid rgb(235, 228, 228);
-        // border-bottom-left-radius: 2px;
-        // border-bottom-right-radius: 2px;
         
         #reason {
           color: whitesmoke;
@@ -458,7 +436,6 @@ html, body {
 
           color: whitesmoke;
           width: 22rem;
-          // border-bottom: 1px dashed whitesmoke;
           padding-top: -70px;
           border-style: dashed;
 
@@ -487,7 +464,6 @@ html, body {
     
       form {
     
-        // display: block;
         border: 1px solid transparent;
         text-align: center;
         
@@ -527,7 +503,7 @@ html, body {
           font-weight: 20;
           font-size: 1.60rem;
           color: #0a59b9;
-          // opacity: .8;
+
         }
         
         ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -565,10 +541,8 @@ html, body {
         }
     
         input[type=submit] {
-          // background-color: #FF8000;
-          background: linear-gradient(to right, #DAC6A6, white);
+          // background: linear-gradient(to right, #DAC6A6, white);
           background: #DAC6A6;
-          color: whitesmoke;
           color: black;
           border-style: none;
           padding: 1rem;
@@ -598,18 +572,6 @@ html, body {
         
       }
 
-      // form::before {
-      //   content: "";
-      //   position: absolute;
-      //   top: 110; 
-      //   left: 0;
-      //   width: 100%; 
-      //   height: 90%;  
-      //   opacity: .4; 
-      //   z-index: 1;
-      //   background: url('/img/palm-tree-silhouette_500x500.png');
-      //   background-size: 42px 42px;
-      // }
     }
 
     /* Style the button that is used to open and close the collapsible content */
@@ -641,7 +603,7 @@ html, body {
       outline: none;
       font-size: 1.58rem;
       margin: auto;
-      // margin-top: 20px;
+    
       z-index: 2 !important;
     }
   
@@ -661,14 +623,12 @@ html, body {
 
       color: rgb(12, 67, 88);
       color: black;
-      // color: rgb(65, 38, 3);
-      
+    
       border-bottom-right-radius: .8rem;
       border-bottom-left-radius: .8rem;
       border-bottom: 2px solid #DAC6A6;
       border-left: 2px solid #DAC6A6;
       border-right: 2px solid #DAC6A6;
-
 
       // text-align: left;
       outline: none;
@@ -683,7 +643,6 @@ html, body {
 
       background-color: white;
       position: relative;
-      // background-size: 82px;
 
       max-height: 0;
       overflow: hidden;
@@ -703,7 +662,6 @@ html, body {
 
         justify-content: center;
         flex-wrap: wrap;
-        // padding: 18px;
     
         hr {
           padding: 4px;
@@ -711,7 +669,6 @@ html, body {
     
         .first {
           justify-content: center;
-          // max-width: 40%;
 
           .title {
             // color: tomato;
@@ -788,79 +745,6 @@ html, body {
 
       z-index: 3;
     }
-
-    /* section {
-      position: static;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-      background: lavender;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-    }
-    
-    section span {
-      position: absolute;
-      bottom: -50px;
-      background: transparent;
-      border-radius: 50%;
-      pointer-events: none;
-      -webkit-box-shadow: inset 0 0 10px rgba(225, 225, 225, 0.5);
-              box-shadow: inset 0 0 10px rgba(225, 225, 225, 0.5);
-      -webkit-animation: animate 4s linear infinite;
-              animation: animate 4s linear infinite;
-    }
-    
-    section span::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      -webkit-transform: scale(0.25) translate(-70%, -70%);
-              transform: scale(0.25) translate(-70%, -70%);
-      background: radial-gradient(#ffffff, transparent);
-      border-radius: 50%;
-    }
-    
-    @-webkit-keyframes animation {
-      0% {
-        -webkit-transform: translateY(0%);
-                transform: translateY(0%);
-        opacity: 1;
-      }
-      99% {
-        opacity: 1;
-      }
-      100% {
-        -webkit-transform: translateY(-1200%);
-                transform: translateY(-1200%);
-        opacity: .1;
-      }
-    }
-    
-    @keyframes animation {
-      0% {
-        -webkit-transform: translateY(0%);
-                transform: translateY(0%);
-        opacity: 1;
-      }
-      99% {
-        opacity: 1;
-      }
-      100% {
-        -webkit-transform: translateY(-1200%);
-                transform: translateY(-1200%);
-        opacity: .1;
-      }
-    } */
-    /*# sourceMappingURL=style.css.map */
 
     .reviews {
       
