--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -79,8 +79,6 @@ body header nav .topnav .collapse ul li a {
 
 html header .topnav,
 body header .topnav {
-  border-bottom-left-radius: 0.28em;
-  border-bottom-right-radius: 0.28em;
   border-bottom-style: hidden;
 }
 
@@ -685,7 +683,6 @@ body .s-content {
   border: none;
   list-style: none;
   margin: auto;
-  color: #0c4358;
   color: black;
   border-bottom-right-radius: 0.8rem;
   border-bottom-left-radius: 0.8rem;
@@ -740,7 +737,7 @@ body .s-content .sections .first .title {
   color: #121e1f;
   background: -webkit-gradient(linear, left top, right top, from(#dddad5), to(white));
   background: linear-gradient(to right, #dddad5, white);
-  padding: 5px;
+  padding: 0.5rem;
 }
 
 html .s-content .sections .second .title,
@@ -748,7 +745,7 @@ body .s-content .sections .second .title {
   color: #121e1f;
   background: -webkit-gradient(linear, left top, right top, from(#dddad5), to(white));
   background: linear-gradient(to right, #dddad5, white);
-  padding: 5px;
+  padding: 0.5rem;
 }
 
 html .s-content .title,
@@ -756,7 +753,7 @@ body .s-content .title {
   color: #121e1f;
   background: -webkit-gradient(linear, left top, right top, from(#dddad5), to(white));
   background: linear-gradient(to right, #dddad5, white);
-  padding: 5px;
+  padding: 0.5rem;
 }
 
 html .s-content:before,
@@ -895,8 +892,6 @@ body #map {
 
 html footer,
 body footer {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#09181d));
-  background-image: linear-gradient(black, #09181d);
   height: auto;
   margin: 0;
   display: -webkit-box;
@@ -912,10 +907,9 @@ body footer {
 
 html p.copyright,
 body p.copyright {
-  padding: 10px;
+  padding: 1rem;
   font-size: 16px;
   text-align: center;
-  color: whitesmoke;
 }
 
 html ul#footer-list,
@@ -924,7 +918,7 @@ body ul#footer-list {
       -ms-flex-align: center;
           align-items: center;
   vertical-align: middle;
-  padding-top: 18px;
+  padding-top: 1rem;
   text-align: center;
   z-index: 3;
 }
