--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -10,11 +10,8 @@
 html,
 body {
   font-family: "Josefin Sans", sans-serif;
-
   width: 100%;
   height: 100%;
-  // background: #78A4DA;
-  // background: linear-gradient(to bottom left, #78A4DA);
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -64,8 +61,6 @@ body {
     }
 
     .topnav {
-      border-bottom-left-radius: 0.28em;
-      border-bottom-right-radius: 0.28em;
       border-bottom-style: hidden;
     }
 
@@ -240,7 +235,6 @@ body {
     margin-right: auto;
     margin-left: auto;
     margin-top: auto;
-    // z-index: 2;
 
     section {
       padding-top: 4rem;
@@ -329,7 +323,6 @@ body {
       margin-bottom: 20px;
       padding-bottom: 1.8rem;
       height: auto;
-      // background-color: white;
       position: relative;
       border: 1px solid grey;
       border-radius: 8px;
@@ -379,7 +372,6 @@ body {
       text-align: center;
       align-items: center;
       align-content: center;
-
       font-size: 1.58rem;
 
       #reason {
@@ -563,7 +555,6 @@ body {
     list-style: none;
     margin: auto;
 
-    color: rgb(12, 67, 88);
     color: black;
 
     border-bottom-right-radius: 0.8rem;
@@ -614,7 +605,7 @@ body {
           // color: tomato;
           color: rgb(18, 30, 31);
           background: linear-gradient(to right, #dddad5, white);
-          padding: 5px;
+          padding: 0.5rem;
         }
       }
 
@@ -624,7 +615,7 @@ body {
           // color: tomato;
           color: rgb(18, 30, 31);
           background: linear-gradient(to right, #dddad5, white);
-          padding: 5px;
+          padding: 0.5rem;
         }
       }
     }
@@ -633,7 +624,7 @@ body {
       // color: tomato;
       color: rgb(18, 30, 31);
       background: linear-gradient(to right, #dddad5, white);
-      padding: 5px;
+      padding: 0.5rem;
     }
   }
 
@@ -767,7 +758,6 @@ body {
   }
 
   footer {
-    background-image: linear-gradient(black, rgb(9, 24, 29));
     // color: black;
     height: auto;
     margin: 0;
@@ -778,16 +768,15 @@ body {
   }
 
   p.copyright {
-    padding: 10px;
+    padding: 1rem;
     font-size: 16px;
     text-align: center;
-    color: whitesmoke;
   }
 
   ul#footer-list {
     align-items: center;
     vertical-align: middle;
-    padding-top: 18px;
+    padding-top: 1rem;
     text-align: center;
     z-index: 3;
     li a {
