--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -66,6 +66,11 @@ body header nav {
   vertical-align: middle;
 }
 
+html header nav .topnav .collapse ul li,
+body header nav .topnav .collapse ul li {
+  font-size: 1.8rem !important;
+}
+
 html header nav .topnav .collapse ul li:hover,
 body header nav .topnav .collapse ul li:hover {
   background: #20201f;
@@ -75,6 +80,12 @@ html header nav .topnav .collapse ul li a,
 body header nav .topnav .collapse ul li a {
   list-style: none;
   color: #f8f8f8 !important;
+}
+
+html header nav .topnav .navbar-brand,
+body header nav .topnav .navbar-brand {
+  font-size: 3rem;
+  font-weight: 400;
 }
 
 html header .topnav,
@@ -146,7 +157,6 @@ body .wrapper {
   height: auto !important;
   height: 100%;
   margin: auto;
-  z-index: 1;
   width: 100% !important;
 }
 
@@ -162,7 +172,6 @@ body .wrapper #pictures {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  z-index: 3 !important;
 }
 
 html .search-cover-photo-container,
@@ -269,26 +278,37 @@ body .lead {
   font-weight: 400;
 }
 
-html .marketing,
-body .marketing {
+html .section,
+body .section {
   height: auto;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: black;
+  width: 100%;
+  padding: 2rem 3rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
   margin-top: auto;
 }
 
-html .marketing section,
-body .marketing section {
-  padding-top: 4rem;
+html .section section,
+body .section section {
+  margin: 5rem 2rem;
+}
+
+html .views,
+body .views {
+  height: auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  line-height: 1.42857143;
+  color: black;
+  width: 100%;
+  padding: 6rem 4rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html .justified-gallery,
@@ -296,6 +316,57 @@ body .justified-gallery {
   width: 100%;
   position: relative;
   overflow: hidden;
+}
+
+html #about,
+body #about {
+  height: auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  line-height: 1.42857143;
+  color: black;
+  width: 100%;
+  padding: 6rem 4rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html .comments,
+body .comments {
+  height: auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  color: black;
+  padding: 6rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html .reviews,
+body .reviews {
+  line-height: 1.8;
+  border: none;
+  list-style: none;
+  outline: none;
+  font-size: 1.8rem;
+  border-radius: 8px;
+}
+
+html .reviews .review,
+body .reviews .review {
+  margin-top: 10px;
+  border-bottom: 1px solid grey;
+  margin-bottom: 18px;
+}
+
+html .reviews .review .title,
+body .reviews .review .title {
+  color: #121e1f;
+  background-color: gray;
+  padding: 5px;
+}
+
+html .reviews .review .comment,
+body .reviews .review .comment {
+  padding: 8px;
 }
 
 html #singleProperty #map,
@@ -472,7 +543,7 @@ body .structure .middle {
 
 html .structure .middle #reason,
 body .structure .middle #reason {
-  color: whitesmoke;
+  color: black;
 }
 
 html .structure .middle #benefits,
@@ -483,7 +554,7 @@ body .structure .middle #benefits {
 
 html .structure .middle div.green,
 body .structure .middle div.green {
-  color: green;
+  font-weight: bold;
 }
 
 html .structure .middle hr,
@@ -795,46 +866,6 @@ body .active:after {
   z-index: 3;
 }
 
-html .reviews,
-body .reviews {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.8;
-  width: 100%;
-  border: none;
-  list-style: none;
-  margin: auto;
-  color: #0c4358;
-  outline: none;
-  font-size: 1.58rem;
-  padding-left: 20px;
-  padding-top: 18px;
-  padding-bottom: 20px;
-  padding-right: 18px;
-  background-color: white;
-  border: 2px solid #dddad5;
-  border-radius: 8px;
-}
-
-html .reviews .review,
-body .reviews .review {
-  margin-top: 10px;
-  border-bottom: 1px solid grey;
-  margin-bottom: 18px;
-}
-
-html .reviews .review .title,
-body .reviews .review .title {
-  color: #121e1f;
-  background: -webkit-gradient(linear, left top, right top, from(#dddad5), to(white));
-  background: linear-gradient(to right, #dddad5, white);
-  padding: 5px;
-}
-
-html .reviews .review .comment,
-body .reviews .review .comment {
-  padding: 8px;
-}
-
 html #gallery,
 body #gallery {
   display: -webkit-box;
@@ -893,7 +924,7 @@ body #map {
 html footer,
 body footer {
   height: auto;
-  margin: 0;
+  padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -918,7 +949,6 @@ body ul#footer-list {
       -ms-flex-align: center;
           align-items: center;
   vertical-align: middle;
-  padding-top: 1rem;
   text-align: center;
   z-index: 3;
 }
@@ -957,36 +987,36 @@ body .push {
   body .intro-message > h1 {
     font-size: 3.8em !important;
   }
-  html #marketing .structure,
-  body #marketing .structure {
+  html .structure,
+  body .structure {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  html #marketing .structure .view,
-  body #marketing .structure .view {
+  html .structure .view,
+  body .structure .view {
     max-width: 33rem;
   }
-  html #marketing .structure .right,
-  body #marketing .structure .right {
+  html .structure .right,
+  body .structure .right {
     max-width: 33rem;
   }
-  html #marketing .structure form input[type="submit"],
-  body #marketing .structure form input[type="submit"] {
+  html .structure form input[type="submit"],
+  body .structure form input[type="submit"] {
     padding: 1.2rem;
     margin-bottom: 2rem;
   }
-  html #marketing .structure form input[type="tel"],
-  body #marketing .structure form input[type="tel"] {
+  html .structure form input[type="tel"],
+  body .structure form input[type="tel"] {
     width: 280px !important;
   }
-  html #marketing .structure form #okay,
-  body #marketing .structure form #okay {
+  html .structure form #okay,
+  body .structure form #okay {
     padding: 10px;
     font-size: 28px;
   }
-  html #marketing .structure form .feedback,
-  body #marketing .structure form .feedback {
+  html .structure form .feedback,
+  body .structure form .feedback {
     padding: 10px;
     font-size: 18px;
   }
@@ -1336,20 +1366,10 @@ body .push {
   html #marketing .reviews,
   body #marketing .reviews {
     margin: auto;
-    font-size: 1.8rem;
-    padding-left: 38px;
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    background-color: white;
   }
   html #marketing .reviews .review,
   body #marketing .reviews .review {
     margin-top: 10px;
-  }
-  html #marketing .reviews .review .title,
-  body #marketing .reviews .review .title {
-    color: tomato;
   }
   html #gallery,
   body #gallery {
@@ -1562,20 +1582,6 @@ body .push {
         -ms-flex-pack: start;
             justify-content: flex-start;
     max-width: 40%;
-  }
-  html .reviews,
-  body .reviews {
-    margin: auto;
-    font-size: 1.8rem;
-    padding-left: 38px;
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    background-color: white;
-  }
-  html .reviews .review,
-  body .reviews .review {
-    margin-top: 10px;
   }
   html #gallery,
   body #gallery {
